style: reset line-height to fix funky video titles on mobile

--- a/ui/src/global.css
+++ b/ui/src/global.css
@@ -1,4 +1,5 @@
 html, body, head {
   background-color: rgb(27, 27, 27);
   min-height: 100%;
+  line-height: 1.15;
 }
